[package]
name = "ronq"
version = "0.1.2"
edition = "2024"
authors = ["Vadim Storozhiloff <vadim@storozhiloff.ru>"]
description = "ron query cli utility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bircoder432/ronq"
homepage = "https://github.com/bircoder432/ronq"
documentation = "https://docs.rs/ronq"
keywords = ["cli", "ron", "query", "utility", "parser"]
categories = ["command-line-utilities", "parsing"]

[[bin]]
name = "rq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
regex = "1.12.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
